added hidden capability for form tab.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <button class="btn btn-large">share a fact</button>
       </header>
-      <form action="" class="fact-form">
+      <form action="" class="fact-form hidden">
         <input type="text" placeholder="share a fact" /><span>200</span>
         <input type="text" name="" id="" placeholder="source of the fact" />
 
@@ -104,8 +104,8 @@
                   class="source"
                   href="https://www.mother.ly/parenting/millennial-dads-spend-more-time-with-their-kids"
                   target="_blank"
-                  >source
-                </a>
+                  >source</a
+                >
               </p>
               <span class="fact-tag" style="background-color: #eab308"
                 >society</span
@@ -120,5 +120,6 @@
         </section>
       </main>
     </div>
+    <script src="scripts/scripts.js"></script>
   </body>
 </html>
