added shared fact hidden feature

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="/assets/images/logo.png" alt="weekend1 project" />
           <h1>weekend1 project</h1>
         </div>
-        <button class="btn btn-large">share a fact</button>
+        <button class="btn btn-large btn-open-sharefact">share a fact</button>
       </header>
       <form action="" class="fact-form hidden">
         <input type="text" placeholder="share a fact" /><span>200</span>
