--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 >Technology</span
               >
               <div class="vote-buttons">
-                <button>👍 24</button>
-                <button>👦 9</button>
-                <button>😡 4</button>
+                <button class="votes-interesting">👍 24</button>
+                <button class="votes-mindblowing">👦 9</button>
+                <button class="votes-false">😡 4</button>
               </div>
             </li>
             <li class="fact">
