--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </ul>
         </aside>
 
-        <section>
+        <section class="fact_section">
           <ul>
             <li class="fact">
               <p>
